# Schrodinger1DConstantPotentialSimulator

./: CMakeLists.txt  conanfile.txt  resource.qrc
Include/: ChartView.hpp  Common.hpp  ComputeRegion.hpp  Constants.hpp  Data.hpp  Utility.hpp
Source/: Main.cpp  example_implot.cpp
bindings/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
